--- a/public/output.css
+++ b/public/output.css
@@ -660,6 +660,10 @@ video {
   right: -3.188rem;
 }
 
+.right-\[16rem\] {
+  right: 16rem;
+}
+
 .right-\[1rem\] {
   right: 1rem;
 }
@@ -676,6 +680,10 @@ video {
   top: -3.938rem;
 }
 
+.top-\[11\.688rem\] {
+  top: 11.688rem;
+}
+
 .top-\[1rem\] {
   top: 1rem;
 }
@@ -684,8 +692,8 @@ video {
   top: 20%;
 }
 
-.top-0 {
-  top: 0px;
+.right-\[4rem\] {
+  right: 4rem;
 }
 
 .mx-auto {
@@ -725,12 +733,12 @@ video {
   margin-top: 4.5rem;
 }
 
-.mt-\[7\.188rem\] {
-  margin-top: 7.188rem;
-}
-
 .mt-\[4rem\] {
   margin-top: 4rem;
+}
+
+.mt-\[7\.188rem\] {
+  margin-top: 7.188rem;
 }
 
 .flex {
@@ -743,6 +751,11 @@ video {
 
 .hidden {
   display: none;
+}
+
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .size-6 {
@@ -806,20 +819,8 @@ video {
   height: 39rem;
 }
 
-.h-\[68\.063rem\] {
-  height: 68.063rem;
-}
-
 .h-\[9\.063rem\] {
   height: 9.063rem;
-}
-
-.h-\[776px\] {
-  height: 776px;
-}
-
-.h-\[779px\] {
-  height: 779px;
 }
 
 .w-\[1\.25rem\] {
@@ -870,6 +871,10 @@ video {
   width: 4.313rem;
 }
 
+.w-\[43rem\] {
+  width: 43rem;
+}
+
 .w-\[4rem\] {
   width: 4rem;
 }
@@ -892,10 +897,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[559px\] {
-  width: 559px;
 }
 
 .max-w-\[30rem\] {
@@ -983,6 +984,10 @@ video {
   gap: 0.25rem;
 }
 
+.gap-\[0\.5rem\] {
+  gap: 0.5rem;
+}
+
 .gap-\[0\.75rem\] {
   gap: 0.75rem;
 }
@@ -1005,6 +1010,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.rounded-\[0\.313rem\] {
+  border-radius: 0.313rem;
 }
 
 .rounded-\[0\.625rem\] {
@@ -1049,6 +1058,14 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#cecaca5c\] {
+  background-color: #cecaca5c;
+}
+
+.bg-\[\#cecaca42\] {
+  background-color: #cecaca42;
 }
 
 .bg-gradient-to-b {
@@ -1125,6 +1142,11 @@ video {
   padding-bottom: 0.688rem;
 }
 
+.py-\[0\.875rem\] {
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
+}
+
 .py-\[1\.313rem\] {
   padding-top: 1.313rem;
   padding-bottom: 1.313rem;
@@ -1134,8 +1156,16 @@ video {
   padding-bottom: 1rem;
 }
 
+.pl-\[0\.875rem\] {
+  padding-left: 0.875rem;
+}
+
 .pr-\[0\.938rem\] {
   padding-right: 0.938rem;
+}
+
+.pr-\[1rem\] {
+  padding-right: 1rem;
 }
 
 .pt-0 {
@@ -1156,6 +1186,10 @@ video {
 
 .text-\[0\.563rem\] {
   font-size: 0.563rem;
+}
+
+.text-\[0\.75rem\] {
+  font-size: 0.75rem;
 }
 
 .text-\[0\.813rem\] {
@@ -1188,6 +1222,10 @@ video {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.leading-\[1\.2rem\] {
+  line-height: 1.2rem;
 }
 
 .leading-\[1\.75rem\] {
@@ -1581,6 +1619,10 @@ video {
 }
 
 @media (min-width: 1280px) {
+  .xl\:absolute {
+    position: absolute;
+  }
+
   .xl\:bottom-\[-5\.5rem\] {
     bottom: -5.5rem;
   }
@@ -1738,6 +1780,10 @@ video {
     top: 25%;
   }
 
+  .\32xl\:right-\[4rem\] {
+    right: 4rem;
+  }
+
   .\32xl\:mr-\[-7\.063rem\] {
     margin-right: -7.063rem;
   }
@@ -1882,6 +1928,10 @@ video {
 
   .\33xl\:right-\[8\.75rem\] {
     right: 8.75rem;
+  }
+
+  .\33xl\:right-\[16rem\] {
+    right: 16rem;
   }
 
   .\33xl\:flex {
