--- a/public/style.css
+++ b/public/style.css
@@ -473,6 +473,10 @@
 
 }
 
+.bg_cus_ques img{
+  height: 68.063rem;
+}
+
 
 .trapezium_shape_img{
   clip-path: polygon(0 85%, 0 0%, 100% 0, 100% 94%);
@@ -485,17 +489,21 @@
 }
 @media(max-width:1919px){
   .trapezium_shape_img{
-    width:26.438rem;
-    height: 36.813rem;
-  
+    clip-path: polygon(0 84%, 0 0%, 100% 0, 100% 95%);
+    left: 7rem;
+    position: absolute;
+    bottom: 9.7%;
+    width: 29.438rem;
+    height: 39.813rem;
   }
 }
 @media(max-width:1535px){
   .trapezium_shape_img{
-    width:22.438rem;
-    height: 30.813rem;
-    bottom:8%;
-    left:8.813rem;
+    width: 25.438rem;
+    height: 34.813rem;
+    bottom: 10%;
+    left: 4.813rem;
+    clip-path: polygon(0 82%, 0 0%, 100% 0, 100% 95%);
   }
 }
 
@@ -516,3 +524,16 @@
       left: 5.813rem;
   }
 }
+
+
+
+@media (max-width: 1023px) {
+  .trapezium_shape_img {
+    clip-path: polygon(0 85%, 0 0%, 100% 0, 100% 95%);
+  }
+  .bg_cus_ques img{
+    height: fit-content;
+  }
+  
+}
+ 
